00_backups/playground/jupiter/camunda-api/deploy/minikube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: camunda
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: camunda.minikube
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: camunda
                port:
                  name: http
